--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "open": "ng serve --open",
     "start": "node server.js",
     "start:local": "ng serve --configuration=local --proxy-config=proxy.config.js",
-    "build": "ng build --configuration",
+    "build": "ng build --configuration --aot=false --build-optimizer=false",
     "build:docker": "ng build --configuration=docker",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
