--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "open": "ng serve --open",
-    "start": "node server.js",
+    "start": "node server.js --port 8080",
     "start:local": "ng serve --configuration=local --proxy-config=proxy.config.js",
     "build": "node --max_old_space_size=5048 ./node_modules/@angular/cli/bin/ng build --configuration",
     "build:docker": "ng build --configuration=docker",
